[package]
name = "prepl"
version = "0.1.0"
authors = ["Mikazuki <mikazuki_fuyuno@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.4"
futures = { version = "0.3" }
tokio = { version = "0.2", features = ["full"] }